--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>
-            help page
+            chat app
 </title>
         </head>
         <body>
-                <h1>My First Heading</h1>
-                <p>My first paragraph.</p>
-        </body>
+                <p>Welcome to the chat app</p>
+
+        <ol id="messages"></ol>
+
+        <form id="message-form">
+          <input name="message" type="text" placeholder="Message"/>
+          <button>Send</button>
+        </form>
+
+        <script src="/js/lib/jquery-3.3.1.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        
+        <script src="/js/index.js"></script>
+        
 
             </html>
