--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,33 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>
+        <link rel="stylesheet" href="/css/styles.css">
+        <!-- <title>
             chat app
-</title>
+</title> -->
         </head>
-        <body>
-                <p>Welcome to the chat app</p>
+        <body class="chat">
+                <div class="chat__sidebar">
+                        <h3>People</h3>
+                        <div id="users"></div>
+                      </div>
+        <div class="chat__main">
+        <ol id="messages" class="chat__messages"></ol>
 
-        <ol id="messages"></ol>
-
+        <div class="chat__footer">
         <form id="message-form">
           <input name="message" type="text" placeholder="Message"/>
           <button>Send</button>
         </form>
+
+        <button id ="send-location">send location</button>
+    </div>
+</div>
 
         <script src="/js/lib/jquery-3.3.1.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         
         <script src="/js/index.js"></script>
         
-
+    </body>
             </html>
